tests/error/14.desc
Compilation error - invalid slice assignment rule