tests/error/14.out
Parser: сompilation error - syntax error, unexpected ':', expecting ']' near line 3
